fix navbar missalignment added original images to current added original css file to current added department full about page view workling announcemnt modal and strip Workinf deprartmnet seciton controls Woking Carouesel Mobile Responsive

--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,10 @@
   background-color: #da0021 !important;
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 .btn-outline-custom-red {
   color: #da0021 !important;
   border: 1px solid #da0021 !important;
@@ -54,29 +58,29 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
- .zoom-img {
-      transition: transform 0.4s ease;
-    }
-    .zoom-img:hover {
-      transform: scale(1.05);
-    }
+.zoom-img {
+  transition: transform 0.4s ease;
+}
 
-    .carousel-indicators [data-bs-target] {
-      width: 1rem;
-      height: 1rem;
-      border-radius: 50%;
-      background-color: #f7f7f7ff;
-      border: none;
-      opacity: 1;
-      transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
-      box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
-    }
+.zoom-img:hover {
+  transform: scale(1.05);
+}
 
-    .carousel-indicators .active {
-      background-color: #e0162aff;
-      transform: scale(1.2);
-      box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
-    }
+.carousel-indicators [data-bs-target] {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: #f7f7f7ff;
+  border: none;
+  opacity: 1;
+  transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+}
 
+.carousel-indicators .active {
+  background-color: #e0162aff;
+  transform: scale(1.2);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+}
 
 
